--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -2,11 +2,15 @@
 
 A man, a dude, a father, a husband, a lover of movies, tech, nature and those who use words recklessly.
 
-**Previously & Professionally**, I've spent the last decade building platforms to unearth the dark corners of social media and
+## Previously & Professionally
+
+I've spent the last decade building platforms to unearth the dark corners of social media and
 to better protect new products developed in that space. This time was spent @ [Meta](meta.com). This work is known publicly as
 "integrity" or ["trust and safety."](https://about.facebook.com/actions/promoting-safety-and-expression/)
 
-**Currently**, I'm researching and prototyping ways for individuals and organizations to better manage and grow their knowledge.
+## Currently
+
+I'm researching and prototyping ways for individuals and organizations to better manage and grow their knowledge.
 Some projects and people that inspire me in this space:
 
 - [Gordon Brander](https://subconscious.substack.com/)
@@ -23,24 +27,24 @@ This has a surprising amount of similarities with the work I did @ [Meta](meta.c
 policies, curating knowledge about real world entities, linking that knowledge to virtual constructs, sharing that knowledge
 across teams (when ready for publication) while also allowing private development of knowledge.
 
-**Currently & Previously** - I have a deep interest in schematization and making programming as declarative as possible.
+## Previously & Currently
+
+I have a deep interest in schematization and making programming as declarative as possible.
+
+1. If programming is more accessible (declarative) less custom apps need writing.
+2. If our languages are declarative then machines can help us with what we _intend_ to do. It is a sad state of affairs that we spend
+   all of our time telling a computer how to do something and little to no time telling it what we're doing. This is not only
+   a loss for tooling but also a loss for documentation (in the sense of [code as documentation](https://martinfowler.com/bliki/CodeAsDocumentation.html)) and communicating
+   between engineers.
+
+   > Programs are meant to be read by humans and only incidentally for computers to execute. -- Donald Knuth
+
+   (Similar at [pg 96 / pdf 106](http://www.softwarepreservation.com/projects/LISP/book/III_LispBook_Apr66-Acro5.pdf))
+
+In my career this manifested in several ways. See [[protocol-for-integrations]].
+
+## Failures
+
+- As much as we embrace and explore the beautiful [we must embrace failure](https://www.philosophizethis.org/transcript/episode-156-transcript)([audio](https://www.philosophizethis.org/podcast/episode-152-the-frankfurt-school-walter-benjamin-pt-1-agcpw-fll9y)).
 
 ---
-
-This is hyperbole but I like to say:
-
-> 99% of apps could just be spreadsheets.
-
-and
-
-> Code is a liability.
-
-The meaning of the first is manifold. In one sense, the right abstraction can solve most of your problems. In another, [YAGNI](https://martinfowler.com/bliki/Yagni.html).
-
-The last is to remind developers that while code does deliver value there is also a cost to every line that is written.
-Maintenance cost, cost to the next developer who has to spend time reading it, eventually (at scale) even deployment costs. The last
-one being a surprisingly high cost at Meta scale where we were well into the hundreds of millions of lines of code by the
-time I departed the company.
-
-Code is **obviously not always a liability**. If it were we'd never write it. Well tested and well abstracted code that never
-needs to be inspected is nearly 100% value and 0% cost.
