stubs to write out

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -48,3 +48,12 @@ In my career this manifested in several ways. See [[protocol-for-integrations]].
 - As much as we embrace and explore the beautiful [we must embrace failure](https://www.philosophizethis.org/transcript/episode-156-transcript)([audio](https://www.philosophizethis.org/podcast/episode-152-the-frankfurt-school-walter-benjamin-pt-1-agcpw-fll9y)).
 
 ---
+
+Why I left work...
+
+-> Changing of the world and company. No more delights and curls.
+
+Why write?
+
+-> Is it waste of time or brings more clarity to what you're doing so you can do less / be more effective?
+The hardest part is figuring out what you're building.. but still need pages of pages of calculation for the "in the dirt" work and intuition.
