--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -52,6 +52,9 @@ In my career this manifested in several ways. See [[protocol-for-integrations]].
 Why I left work...
 
 -> Changing of the world and company. No more delights and curls.
+-> from CIB to... something else.
+-> Privacy... Not at a stage of maturity that allows principled decision making. https://en.wikipedia.org/wiki/Casuistry
+-> Oliver, need to do my own thinking and things
 
 Why write?
 
