--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,9 +4,17 @@ A man, a dude, a father, a husband, a lover of movies, tech, nature and those wh
 
 ## Previously & Professionally
 
-I've spent the last decade building platforms to unearth the dark corners of social media and
-to better protect new products developed in that space. This time was spent @ [Meta](meta.com). This work is known publicly as
-"integrity" or ["trust and safety."](https://about.facebook.com/actions/promoting-safety-and-expression/)
+I've spent most of the last decade building platforms to unearth the dark corners of social media and
+to better protect new products developed in that space @ [Meta](meta.com). This work is known publicly as
+"integrity" or ["trust and safety."](https://about.facebook.com/actions/promoting-safety-and-expression/).
+
+While at [Meta](meta.com) I also led the move to privacy aware infrastructure for all of Integrity. This was the first time in
+my career that imposter syndrome caused me to abdicate my techincal instincts and, while we made some impressive progress,
+I view my efforts here as a failure when compared with what could have been. I'll write more on what "privacy aware infrastructure" is
+as Meta makes more of those details public.
+
+When I started at Meta it was a company of ~5,000 employees. When I left it was well over 100,000 employees. While still a great
+place to work it isn't the company it once was.
 
 ## Currently
 
@@ -41,22 +49,25 @@ I have a deep interest in schematization and making programming as declarative a
 
    (Similar at [pg 96 / pdf 106](http://www.softwarepreservation.com/projects/LISP/book/III_LispBook_Apr66-Acro5.pdf))
 
-In my career this manifested in several ways. See [[protocol-for-integrations]].
+In my career I applied schematization as a way to fix large swaths of problems. Both within integrity/trust & safety (see [[protocol-for-integrations]]) and
+and privacy (see [[policy in code]] and [[data deletion]]).
 
-## Failures
+## Weaknesses
 
-- As much as we embrace and explore the beautiful [we must embrace failure](https://www.philosophizethis.org/transcript/episode-156-transcript)([audio](https://www.philosophizethis.org/podcast/episode-152-the-frankfurt-school-walter-benjamin-pt-1-agcpw-fll9y)).
+As much as we embrace and explore success, [we should enjoy and explore our failures](https://www.philosophizethis.org/transcript/episode-156-transcript) ([audio](https://www.philosophizethis.org/podcast/episode-152-the-frankfurt-school-walter-benjamin-pt-1-agcpw-fll9y)).
+I'll write more on these as time goes by but my failings are the result of these weaknesses:
 
----
+- Staying on teams and taking opportunities out of a sense of duty, obligation & chance for advancement rather than personal interest.
+- Occasional imposter syndrome / placing too much confidence in the experience of others over my own experience.
+- Being too hesitant to escalate problems to the director level and above.
 
-Why I left work...
+## Strengths
 
--> Changing of the world and company. No more delights and curls.
--> from CIB to... something else.
--> Privacy... Not at a stage of maturity that allows principled decision making. https://en.wikipedia.org/wiki/Casuistry
--> Oliver, need to do my own thinking and things
+I find it awkward to talk about stengths but, as uncomfortable as it may be, they must be stated so we can be aware of them
+and be more effective.
 
-Why write?
-
--> Is it waste of time or brings more clarity to what you're doing so you can do less / be more effective?
-The hardest part is figuring out what you're building.. but still need pages of pages of calculation for the "in the dirt" work and intuition.
+- Ability to jump into any codebase and understand it quickly
+- Ability to zoom out and predict the 2+ year investments to make
+- Ability to zoom in and break that vision down into iterative chunks of execution
+- Ability to communicate the broad ideas and small milestones to technical and non-technical partners
+- Extermely fast developer from conception to design to implementation
