fixup all syntax

--- a/blog/2013-08-15-Oh-Lisp.md
+++ b/blog/2013-08-15-Oh-Lisp.md
@@ -16,19 +16,16 @@ If you ever tell someone you like Lisp and that Lisp is a more suitable language
 Which is unfortunate because I believe Lisp to be one of the most important programming languages we currently have. I’ve yet to find an article that concisely, clearly and effectively describes the advantages of Lisp to the Lisp skeptic, so here goes my attempt at it.
 
 I’m sure you’re familiar with XML so let’s consider that for a moment.
+<!--truncate-->
 
-You can think of Lisp as being like XML. There really isn’t anything to XML besides balanced <>’s yet it is tremendously useful. Because of how open ended the XML syntax is, you can use it to represent nearly any kind of **data** or **program**. Because of how simple the XML syntax is, it is easily read and manipulated by humans and programs.
+You can think of Lisp as being like XML. There really isn’t anything to XML besides balanced \<\>’s yet it is tremendously useful. Because of how open ended the XML syntax is, you can use it to represent nearly any kind of **data** or **program**. Because of how simple the XML syntax is, it is easily read and manipulated by humans and programs.
 
 Some examples where XML is in use:
 
 1. [Ant](http://ant.apache.org/) uses XML to define build files.
-
 2. [WSDL](http://en.wikipedia.org/wiki/Web_Services_Description_Language) uses XML to describe web services
-
 3. XML [databases](http://exist-db.org/exist/apps/homepage/index.html)
-
 4. [XSLT](http://en.wikipedia.org/wiki/XSLT) is an XML language for translating XML to other formats (Lisp’s analog would be macros)
-
 5. [AIML](http://en.wikipedia.org/wiki/AIML) — Artificial Intelligence Markup Language
 
 As you can see from those examples and likely your own experience with XML, XML allows you to come up with your own tags and thus your own sub-language. Ant uses XML as a build language, WSDL uses it as a service language, ALICE uses it as an AI language and XSLT uses it as a macro language.
@@ -37,15 +34,19 @@ An external program or parser (e.g., Ant, XSLT, Maven, JAXB) is what confers mea
 
 To make the comparison of XML and Lisp concrete, here is a comparison of an XML document and a representation of it in Lisp:
 
-    <!--xml-->
-    <println>
-        <even>
-          <list><elem>1</elem><elem>2</elem><elem>3</elem></list>
-        </even>
-    </println>
+```xml
+<!--xml-->
+<println>
+    <even>
+      <list><elem>1</elem><elem>2</elem><elem>3</elem></list>
+    </even>
+</println>
+```
 
-    ; Lisp
-    (println (even (list 1 2 3))) ; => 2
+```clojure
+; Lisp
+(println (even (list 1 2 3))) ; => 2
+```
 
 In Lisp, every “tag” is a function or a macro. So in our above example, _println_, _even_ and _list_ are functions or macros that you would define in Lisp.
 
@@ -59,25 +60,29 @@ Let’s look at a comparison of Lisp, XML and Javascript.
 
 Lisp code to construct a deck of slides:
 
-    (deck (slides
-            (slide
-              (components
-                 (text-box "some text" (position 0 0))
-                 (image "img.png" (position 0 200)))
-            (slide ...)))
+```clojure
+(deck (slides
+        (slide
+          (components
+              (text-box "some text" (position 0 0))
+              (image "img.png" (position 0 200)))
+        (slide ...)))
+```
 
 XML:
 
-    <deck>
-      <slides>
-        <slide>
-          <components>
-            <text-box text="some text" position="0,0"/>
-            <image src"img.png" position="0,200"/>
-          </component>
-        </slide>
-      </slides>
-    </deck>
+```xml
+<deck>
+  <slides>
+    <slide>
+      <components>
+        <text-box text="some text" position="0,0"/>
+        <image src"img.png" position="0,200"/>
+      </component>
+    </slide>
+  </slides>
+</deck>
+```
 
 Javascript to construct a deck of slides:
 
@@ -114,81 +119,91 @@ Notice how the code passed to the Lisp macro is accessed and used as a list of l
 
 **Lisp Macro:**
 
-     ; words is the code passed to the macro
-     (defmacro dictionary (&rest words)
-     `(progn
-    	(format t "<dictionary>~%")
+```clojure
+; words is the code passed to the macro
+(defmacro dictionary (&rest words)
+`(progn
+(format t "<dictionary>~%")
 
-              ; for each word in words
-    	(dolist (word ',words)
-    	  (format t " <word>~%")
+        ; for each word in words
+(dolist (word ',words)
+  (format t " <word>~%")
 
-                ; get the first item (e.g., xml,java,lisp)
-    	  (format t "	<id>~A</id>~%" (first word))
+          ; get the first item (e.g., xml,java,lisp)
+  (format t "	<id>~A</id>~%" (first word))
 
-                ; get the second item (i.e., the definition)
-    	  (format t "	<def>~S</def>~%" (second word))
+          ; get the second item (i.e., the definition)
+  (format t "	<def>~S</def>~%" (second word))
 
-    	  (format t " </word>~%"))
-    	  (format t "</dictionary>~%"))
-            )
+  (format t " </word>~%"))
+  (format t "</dictionary>~%"))
+)
+```
 
 Now, when I enter the following sexpr...
 
-     (dictionary
-    	(xml "data language")
-    	(java "programming language")
-    	(lisp "programming and data language"))
+```clojure
+(dictionary
+  (xml "data language")
+  (java "programming language")
+  (lisp "programming and data language"))
+```
 
 ...I get the following result:
 
-     <dictionary>
-    	<word>
-    	<id>xml</id>
-    	<def>"data language"</def>
-    	</word>
-    	<word>
-    	<id>java</id>
-    	<def>"programming language"</def>
-    	</word>
-    	<word>
-    	<id>lisp</id>
-    	<def>"programming and data language"</def>
-    	</word>
-     </dictionary>
+```xml
+<dictionary>
+  <word>
+    <id>xml</id>
+    <def>"data language"</def>
+  </word>
+  <word>
+    <id>java</id>
+    <def>"programming language"</def>
+  </word>
+  <word>
+    <id>lisp</id>
+    <def>"programming and data language"</def>
+  </word>
+</dictionary>
+```
 
 **XSLT:**
 
-    <xsl:template match="dictionary">
-    	<xsl:text>(dictionary</xsl:text>
-    	<xsl:apply-templates />
-    	<xsl:text>)&#10;</xsl:text>
-     </xsl:template>
+```xslt
+<xsl:template match="dictionary">
+  <xsl:text>(dictionary</xsl:text>
+  <xsl:apply-templates />
+  <xsl:text>)&#10;</xsl:text>
+</xsl:template>
 
-     <xsl:template match="word">
-    	<xsl:text>&#10; (</xsl:text>
-    	<xsl:value-of select="id" />
-    	<xsl:text> &quot;</xsl:text>
-    	<xsl:value-of select="def" />
-    	<xsl:text>&quot;)</xsl:text>
-     </xsl:template>
+<xsl:template match="word">
+  <xsl:text>&#10; (</xsl:text>
+  <xsl:value-of select="id" />
+  <xsl:text> &quot;</xsl:text>
+  <xsl:value-of select="def" />
+  <xsl:text>&quot;)</xsl:text>
+</xsl:template>
+```
 
 Now, when I enter the following XML,
 
-     <dictionary>
-    	<word>
-    	<id>xml</id>
-    	<def>data language</def>
-    	</word>
-    	<word>
-    	<id>java</id>
-    	<def>programming language</def>
-    	</word>
-    	<word>
-    	<id>lisp</id>
-    	<def>programming and data language</def>
-    	</word>
-     </dictionary>
+```xml
+<dictionary>
+  <word>
+    <id>xml</id>
+    <def>data language</def>
+  </word>
+  <word>
+    <id>java</id>
+    <def>programming language</def>
+  </word>
+  <word>
+    <id>lisp</id>
+    <def>programming and data language</def>
+  </word>
+</dictionary>
+```
 
 I get the following result:
 
@@ -204,17 +219,12 @@ It would be interesting to extend this analogy of Lisp and XML to something like
 Lisp resources:
 
 - [Lisp on the JVM, CLR and Javascript](http://clojure.org/)
-
 - [Lisp for creating new languages that don’t look like Lisp](http://racket-lang.org/)
-
 - [Common Lisp](http://common-lisp.net/)
 
 XML based programming languages (not that I think these are a terribly good idea due to the verbosity of XML but it illustrates the flexibility of XML, and thus Lisp, effectively):
 
 - [XSLT](http://en.wikipedia.org/wiki/XSLT) (turing complete)
-
 - [Schematron](http://en.wikipedia.org/wiki/Schematron)
-
 - [POSXML](http://en.wikipedia.org/wiki/POSXML)
-
 - [XProc](http://en.wikipedia.org/wiki/XProc)
