--- a/blog/2021-03-01-Nic-Cage-Genre.mdx
+++ b/blog/2021-03-01-Nic-Cage-Genre.mdx
@@ -6,10 +6,12 @@ tags: [entertainment]
 
 Not many people realize this but [Nicolas Cage](https://www.reddit.com/r/onetruegod/) is slowly but surely carving out and defining a whole new genre of trippy and artistic horror movies. Is he doing this intentionally or acidentally?
 
-One word to describe it? <span style="color: purple;"><strong>Purple.</strong></span>
+One word to describe it? <span style={{color: "purple;"}}><strong>Purple.</strong></span>
 
 <center>
   <a href="https://www.imdb.com/title/tt5073642/"><img src="/assets/posts/cage-genre/out-of-space.jpeg" /></a>
   <a href="https://www.imdb.com/title/tt6998518/"><img src="/assets/posts/cage-genre/mandy.jpeg" /></a>
   <a href="https://www.imdb.com/title/tt8114980/"><img src="/assets/posts/cage-genre/willy.jpeg" /></a>
 </center>
+
+<!--truncate-->
