--- a/blog/2013-07-30-Inheritance-Aggregation-and-Pipelines.mdx
+++ b/blog/2013-07-30-Inheritance-Aggregation-and-Pipelines.mdx
@@ -3,22 +3,38 @@ title: Inheritance, Aggregation, and Pipelines
 tags: [software-engineering]
 ---
 
+import Figure from '@site/src/components/Figure';
+import aggregateReplacements from '@site/static/blog-assets/inheritance-aggregation-pipelines/aggregates-replacements.png';
+import journaling from '@site/static/blog-assets/inheritance-aggregation-pipelines/journaling.png';
+import lruMru from '@site/static/blog-assets/inheritance-aggregation-pipelines/lru-mru.png';
+import pipelineContext from '@site/static/blog-assets/inheritance-aggregation-pipelines/pipeline-context.png';
+import pipeline from '@site/static/blog-assets/inheritance-aggregation-pipelines/pipeline.png';
+import resourceLruCached from '@site/static/blog-assets/inheritance-aggregation-pipelines/resource-lru-cached.png';
+import resourceProvider from '@site/static/blog-assets/inheritance-aggregation-pipelines/resource-provider.png';
+
 How does one write software that can be extended?
 
 I think many developer’s first instinct is to set up some form of inheritance hierarchy. Inheritance is a step in the right direction but it is very restrictive. The problem with inheritance is that relationships between your components and their extensions are rigidly defined at compile time.
+
 <!--truncate-->
 
 Take a set of classes that provide access to resources at various URIs as an example. The base class just provides get/put/delete operations.
 
-{% include image.html url="/assets/images/inheritance-aggregation-pipelines/resource-provider.png" description="base resource provider. get/put/delete resources at different URIs" %}
+<Figure
+  url={resourceProvider}
+  description="base resource provider. get/put/delete resources at different URIs"
+/>
 
 Later, someone wants to add some sort of caching to this. Their first instinct is to extend the functionality via inheritance. So now you have something that looks like the following.
 
-{% include image.html url="/assets/images/inheritance-aggregation-pipelines/resource-lru-cached.png" description="ResourceProvider extended to add caching" %}
+<Figure
+  url={resourceLruCached}
+  description="ResourceProvider extended to add caching"
+/>
 
 But someone else in the organization may have a use case where LRU caching doesn’t work well so they add a new extension.
 
-{% include image.html url="/assets/images/inheritance-aggregation-pipelines/lru-mru.png" description="Two different caching algorithms" %}
+<Figure url={lruMru} description="Two different caching algorithms" />
 
 and finally a requirement is added that accesses to certain resource provider instances need to be journaled. So where do you put the journaling class in the hierarchy? You could inherit directly from **ResourceProvider** but then should you update the cache implementations to inherit from the journaling class? What about the use cases that need caching but not journaling? Or journaling and not caching? Inheritance has forced you into an awkward situation where you can’t perfectly capture any of the relationships you need.
 
@@ -32,7 +48,10 @@ A solution that depends on aggregation would differ in that instead of each clas
 
 If you want to make a Journaling, LRU cached resource provider then you instantiate those three classes and have them contain one another. Here is a class diagram to illustrate a Journaling, LRU cached resource provider:
 
-{% include image.html url="/assets/images/inheritance-aggregation-pipelines/journaling.png" description="Instead of inheriting, everyone implements a common interface and then holds an instance of that interface." %}
+<Figure
+  url={journaling}
+  description="Instead of inheriting, everyone implements a common interface and then holds an instance of that interface."
+/>
 
 The **JournalingResourceProvider** contains an **LRUCachedResourceProvider** which contains a regular **ResourceProvider**. Calls made on the **JournalingResourceProvider** are handled and then passed on to the **LRUCachedResourceProvider** where they are handled by the cache and then passed on to the actual **ResourceProvider** if need be.
 
@@ -44,7 +63,10 @@ Of course aggregation has its limitations as well. In the prior example, if you 
 
 More generally, adding and removing delegates in the middle of the chain of aggregations is difficult. You have to touch the objects on either side of what is being added, removed or replaced.
 
-{% include image.html url="/assets/images/inheritance-aggregation-pipelines/aggregates-replacements.png" description="Aggregate1's link needs to be updated to refer to Replacement. Aggregate2 needs to expose its link so Replacement can refer to Aggregate3." %}
+<Figure
+  url={aggregateReplacements}
+  description="Aggregate1's link needs to be updated to refer to Replacement. Aggregate2 needs to expose its link so Replacement can refer to Aggregate3."
+/>
 
 This difficulty in replacing arbitrary parts of the aggregation isn’t ideal but luckily there is a solution.
 
