--- a/blog/2021-02-07-volatility-isnt-risk.mdx
+++ b/blog/2021-02-07-volatility-isnt-risk.mdx
@@ -26,7 +26,7 @@ The graph below is a highly volatile investment but the trend of the volatility 
 
 An oft repeated mantra in investing is that “past performance doesn’t guarantee future performance.” If we know this then why do we think that past volatility can somehow predict future risk? One theory is that academics are searching for a way to quantify risk. Another is that figuring out when to buy and sell a volatile investment looks difficult and risky.
 
-# When do you buy, when do you sell?
+## When do you buy, when do you sell?
 
 If a stock is extremely volatile, when do you buy in and when do you sell? You wouldn't want to end up buying at a peak and killing your returns if you sell in a dip.
 
@@ -45,7 +45,7 @@ In the above example, **<span className="blue">blue</span>** makes a killer retu
 
 Dollar cost average is a very passive way of buying and selling. Something I'd recommend when buying into index funds or established companies. If you're buying into emerging companies you should be doing your own price & risk assessments which will further inform when you should buy and sell.
 
-# Assessing Risk
+## Assessing Risk
 
 So how do you assess the risk of an investment? Stay tuned for the next post.
 
