more image replacements

--- a/blog/2021-02-08-reactive-markdown.mdx
+++ b/blog/2021-02-08-reactive-markdown.mdx
@@ -9,6 +9,7 @@ image: /assets/posts/reactive-markdown/cover.svg
 ---
 
 import '@site/static/blog-assets/reactive-markdown/main.css';
+import InfraInvest from '@site/static/blog-assets/reactive-markdown/infra-invest.svg';
 
 ## DEPRECATED -- moved to mdx.
 
@@ -75,7 +76,7 @@ Given I'll be writing lots of blog posts, and thus spending lots of time writing
 
 **Side note -** investing in software infrastructure is an optimization problem. Under ideal circumstances: the more you invest in infra, the faster the work on top of it goes. If there is a limited amount of work to be done on top of that infra, however, the infra investment should be bounded. Once infra is "good enough", continued investments start producing diminishing returns (unless there is a paradigm shift. A post for another day.).
 
-{% include image.html url="/assets/posts/reactive-markdown/infra-invest.svg" description="More time spent writing infra -> less time required to write a blog entry. Continued infra investments will eventually produce little time savings." %}
+<InfraInvest style={{ width: 600, height: 400 }} />
 
 ## Reactive Markdown
 
