--- a/blog/2013-07-30-Inheritance-Aggregation-and-Pipelines.mdx
+++ b/blog/2013-07-30-Inheritance-Aggregation-and-Pipelines.mdx
@@ -1,4 +1,5 @@
 ---
+slug: 2013-07-30-Inheritance-Aggregation-and-Pipelines
 title: Inheritance, Aggregation, and Pipelines
 tags: [software-engineering]
 ---
