--- a/blog/2021-03-01-Nic-Cage-Genre.mdx
+++ b/blog/2021-03-01-Nic-Cage-Genre.mdx
@@ -1,5 +1,5 @@
 ---
-
+slug: 2021-03-01-Nic-Cage-Genre
 title: 'Nicolas Cage is Creating a new Movie Genre'
 tags: [entertainment]
 ---
@@ -9,9 +9,15 @@ Not many people realize this but [Nicolas Cage](https://www.reddit.com/r/onetrue
 One word to describe it? <span style={{color: "purple;"}}><strong>Purple.</strong></span>
 
 <center>
-  <a href="https://www.imdb.com/title/tt5073642/"><img src="/assets/posts/cage-genre/out-of-space.jpeg" /></a>
-  <a href="https://www.imdb.com/title/tt6998518/"><img src="/assets/posts/cage-genre/mandy.jpeg" /></a>
-  <a href="https://www.imdb.com/title/tt8114980/"><img src="/assets/posts/cage-genre/willy.jpeg" /></a>
+  <a href="https://www.imdb.com/title/tt5073642/">
+    <img src="/assets/posts/cage-genre/out-of-space.jpeg" />
+  </a>
+  <a href="https://www.imdb.com/title/tt6998518/">
+    <img src="/assets/posts/cage-genre/mandy.jpeg" />
+  </a>
+  <a href="https://www.imdb.com/title/tt8114980/">
+    <img src="/assets/posts/cage-genre/willy.jpeg" />
+  </a>
 </center>
 
 <!--truncate-->
