--- a/blog/2021-12-17-Object-Identity.mdx
+++ b/blog/2021-12-17-Object-Identity.mdx
@@ -1,8 +1,13 @@
 ---
-
+slug: 2021-12-17-Object-Identity
 title: 'Reference Equality - What is it Really?'
 tags: [software-engineering, framework]
 ---
+
+import Figure from '@site/src/components/Figure';
+import shipoftheseus from '@site/static/blog-assets/identity-software/shipoftheseus.jpg';
+import reference from '@site/static/blog-assets/identity-software/reference.png';
+import immutable from '@site/static/blog-assets/identity-software/immutable.png';
 
 In programming we're met with things that are completely new. Even though they're new, they're familiar enough to grasp with existing concepts. This converting the new to something familiar helps us to understand things at one level but if the familiar does not perfectly match the new then it causes us to fail to understand at another level.
 
@@ -16,7 +21,7 @@ But first, what is identity?<!--truncate-->
 
 # Identity
 
-{% include image.html url="/assets/images/identity-software/shipoftheseus.jpg" description="Ship of Theseus" %}
+<Figure url={shipoftheseus} description="Ship of Theseus" />
 
 The problem of identity has been with us since at least 500 B.C. where it was discussed in the thought experiement the [Ship of Theseus](https://en.wikipedia.org/wiki/Ship_of_Theseus).
 
@@ -45,11 +50,17 @@ So is reference quality nominal or physical identity or neither?
 
 Reference equality looks a lot like nominal identity. A reference points to something as does a name. If the thing pointed to changes over time, the reference still holds just like nominal identity.
 
-{% include image.html url="/assets/images/identity-software/reference.png" description="Reference Equality Providing Nominal Identity" %}
+<Figure
+  url={reference}
+  description="Reference Equality Providing Nominal Identity"
+/>
 
 Reference equality being the same as nominal identity breaks down as soon as you intorduce immutability. Once an object is immutable, there's no longer a way to capture the nominal identity of that object via a reference. This is the case since every time you change the object you must create a new one so the reference is always new. Immutable objects are thus left with only having a physical, and no nominal, identity.
 
-{% include image.html url="/assets/images/identity-software/immutable.png" description="Reference Equality Losing Nominal Identity" %}
+<Figure
+  url={immutable}
+  description="Reference Equality Losing Nominal Identity"
+/>
 
 A program with immutable objects can't express a stable concept over time, only discrete physical states.
 
